kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: library
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
