kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: library
spec:
  rules:
  - host: ahmedalaa14.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 5000
